Show a notice on load.
If someone actually installs this one, this will point them in the right direction.

--- a/stylesheets/git-merge-conflicts.less
+++ b/stylesheets/git-merge-conflicts.less
@@ -4,5 +4,7 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-.git-merge-conflicts {
+.dont-use-this-notice {
+  text-align: center;
+  cursor: pointer;
 }
